--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr style="padding:0px">
-                <td style="padding:2.5%;width:63%;vertical-align:middle">
+                <td style="padding:2.5%;width:68%;vertical-align:middle">
                   <p style="text-align:center">
                     <name>Zhihao Zhang (张志浩)</name>
                   </p>
@@ -49,12 +49,11 @@
                     <a href="https://www.linkedin.com/in/zhihao-zhang-bb92b8265/">LinkedIn</a> &nbsp/&nbsp
                     <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ&hl=zh-CN">Google Scholar</a>
                     &nbsp/&nbsp
-                    <a href="https://x.com/ZhihaoZ75030773">Twitter (X)</a> &nbsp/&nbsp
+                    <a href="https://x.com/ZhihaoZ75030773">Twitter</a> &nbsp/&nbsp
                     <a href="https://github.com/alanzhangcs">Github</a>
-                    <!-- <a href="https://www.zhihu.com/people/pang-zi-qi-40">知乎</a> -->
                   </p>
                 </td>
-                <td style="padding:2.5%;width:40%;max-width:40%">
+                <td style="padding:2.5%;width:32%;max-width:32%">
                   <a href="images/zhihaozhang1.png"><img style="width:100%;max-width:100%" alt="profile photo"
                       src="images/zhihaozhang1.png" class="hoverZoomLink"></a>
                 </td>
@@ -64,10 +63,10 @@
 
           <!-- Research Section -->
           <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:20px;">
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:5px;">
             <tbody>
               <tr>
-                <td style="padding:20px;width:100%;vertical-align:middle">
+                <td style="padding:5px 20px;width:100%;vertical-align:middle">
                   <heading>Research</heading>
                   <p style="margin-top:16px;">
                     My research interests lie at the intersection of <strong>multi-modal learning</strong> and
@@ -78,7 +77,7 @@
                   <ul style="margin-top:12px;">
                     <li>3D shape understanding, 3D object detection for autonomous driving </li>
                     <li>Multi-modal learning for 3D perception</li>
-                    <li>Spatial intelligence</li>
+                    <li>Spatial intelligence in VLMs</li>
                   </ul>
                   </p>
                 </td>
@@ -86,12 +85,35 @@
             </tbody>
           </table>
 
-          <!-- Publications Section -->
+          <!-- News Section -->
           <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:30px;">
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:5px;">
             <tbody>
               <tr>
-                <td style="padding:20px;width:100%;vertical-align:middle">
+                <td style="padding:5px 20px;width:100%;vertical-align:middle">
+                  <heading>News</heading>
+                  <div style="max-height:200px;overflow-y:auto;margin-top:8px;padding-right:10px;">
+                    <ul style="margin-top:4px;">
+                      <li><strong>[2026.02]</strong> Two first-author papers accepted by CVPR 2026!</li>
+                      <li><strong>[2025.07]</strong> One paper accepted by ICCV 2025!</li>
+                      <li><strong>[2024.08]</strong> Joined MSU as a Ph.D. student!</li>
+                      <li><strong>[2024.06]</strong> Honored with the Outstanding Graduate Thesis Award at XJTU!
+                      </li>
+                      <li><strong>[2024.02]</strong> One paper accepted by CVPR 2024!</li>
+                      <li><strong>[2023.11]</strong> Honored with the National Scholarship!</li>
+                    </ul>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
+          <!-- Publications Section -->
+          <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top:5px;">
+            <tbody>
+              <tr>
+                <td style="padding:5px 20px;width:100%;vertical-align:middle">
                   <heading>Selected Publications</heading>
                 </td>
               </tr>
