--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                       <li><strong>[2024.08]</strong> Joined MSU as a Ph.D. student!</li>
                       <li><strong>[2024.06]</strong> Honored with the Outstanding Graduate Thesis Award at XJTU!
                       </li>
-                      <li><strong>[2024.02]</strong> One paper accepted by CVPR 2024!</li>
+                      <li><strong>[2024.02]</strong> One first-author paper accepted by CVPR 2024!</li>
                       <li><strong>[2023.11]</strong> Honored with the National Scholarship!</li>
                     </ul>
                   </div>
