--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎓</text></svg>">
 </head>
@@ -45,12 +46,11 @@
                       Urabana-Champaign</a> (UIUC) with Prof. <a href="https://yxw.web.illinois.edu/">Yu-Xiong Wang</a>.
                   </p>
                   <p style="text-align:center">
-                    <a href="mailto:zhan2365@msu.edu">Email</a> &nbsp/&nbsp
-                    <a href="https://www.linkedin.com/in/zhihao-zhang-bb92b8265/">LinkedIn</a> &nbsp/&nbsp
-                    <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ&hl=zh-CN">Google Scholar</a>
-                    &nbsp/&nbsp
-                    <a href="https://x.com/ZhihaoZ75030773">Twitter</a> &nbsp/&nbsp
-                    <a href="https://github.com/alanzhangcs">Github</a>
+                    <a href="mailto:zhan2365@msu.edu" title="Email"><i class="fas fa-envelope"></i></a> &nbsp;&nbsp;
+                    <a href="https://www.linkedin.com/in/zhihao-zhang-bb92b8265/" title="LinkedIn"><i class="fab fa-linkedin"></i></a> &nbsp;&nbsp;
+                    <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ&hl=zh-CN" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a> &nbsp;&nbsp;
+                    <a href="https://x.com/ZhihaoZ75030773" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;&nbsp;
+                    <a href="https://github.com/alanzhangcs" title="Github"><i class="fab fa-github"></i></a>
                   </p>
                 </td>
                 <td style="padding:2.5%;width:32%;max-width:32%">
