--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <table
-    style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+    style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
@@ -47,9 +47,12 @@
                   </p>
                   <p style="text-align:center">
                     <a href="mailto:zhan2365@msu.edu" title="Email"><i class="fas fa-envelope"></i></a> &nbsp;&nbsp;
-                    <a href="https://www.linkedin.com/in/zhihao-zhang-bb92b8265/" title="LinkedIn"><i class="fab fa-linkedin"></i></a> &nbsp;&nbsp;
-                    <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ&hl=zh-CN" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a> &nbsp;&nbsp;
-                    <a href="https://x.com/ZhihaoZ75030773" title="Twitter"><i class="fab fa-twitter"></i></a> &nbsp;&nbsp;
+                    <a href="https://www.linkedin.com/in/zhihao-zhang-bb92b8265/" title="LinkedIn"><i
+                        class="fab fa-linkedin"></i></a> &nbsp;&nbsp;
+                    <a href="https://scholar.google.com/citations?user=4bCjIH0AAAAJ&hl=zh-CN" title="Google Scholar"><i
+                        class="fas fa-graduation-cap"></i></a> &nbsp;&nbsp;
+                    <a href="https://x.com/ZhihaoZ75030773" title="Twitter"><i class="fab fa-twitter"></i></a>
+                    &nbsp;&nbsp;
                     <a href="https://github.com/alanzhangcs" title="Github"><i class="fab fa-github"></i></a>
                   </p>
                 </td>
@@ -123,14 +126,14 @@
 
 
           <table
-            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:collapse;margin-right:auto;margin-left:auto;">
             <tbody>
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:30%;vertical-align:middle">
-                  <div class="one"><img src="images/MonoIA.png" style="width:120%;height:auto">
+                <td style="padding:20px 20px 20px 20px;width:30%;vertical-align:middle">
+                  <div class="one"><img src="images/MonoIA.png" style="width:100%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:70%;vertical-align:middle">
+                <td style="padding:20px 20px 20px 0px;width:70%;vertical-align:middle">
                   <papertitle>Towards Intrinsic-Aware Monocular 3D Object Detection
                   </papertitle>
                   <br>
@@ -148,11 +151,11 @@
                 </td>
               </tr>
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:30%;vertical-align:middle">
-                  <div class="one"><img src="images/monocop.png" style="width:120%;height:auto">
+                <td style="padding:20px 20px 20px 20px;width:30%;vertical-align:middle">
+                  <div class="one"><img src="images/monocop.png" style="width:100%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:70%;vertical-align:middle">
+                <td style="padding:20px 20px 20px 0px;width:70%;vertical-align:middle">
                   <papertitle>Unleashing the Power of Chain-of-Prediction for Monocular 3D Object Detection
                   </papertitle>
                   <br>
@@ -171,11 +174,11 @@
                 </td>
               </tr>
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:30%;vertical-align:middle">
-                  <div class="one"><img src="images/charm3r.png" style="width:120%;height:auto">
+                <td style="padding:20px 20px 20px 20px;width:30%;vertical-align:middle">
+                  <div class="one"><img src="images/charm3r.png" style="width:100%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:70%;vertical-align:middle">
+                <td style="padding:20px 20px 20px 0px;width:70%;vertical-align:middle">
                   <papertitle>CHARM3R: Towards Unseen Camera Height Robust Monocular 3D Detector
                   </papertitle>
                   <br>
@@ -199,11 +202,11 @@
 
 
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:30%;vertical-align:middle">
-                  <div class="one"><img src="images/tamm.png" style="width:120%;height:auto">
+                <td style="padding:20px 20px 20px 20px;width:30%;vertical-align:middle">
+                  <div class="one"><img src="images/tamm.png" style="width:100%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:70%;vertical-align:middle">
+                <td style="padding:20px 20px 20px 0px;width:70%;vertical-align:middle">
                   <papertitle>TAMM: TriAdapter Multi-Modal Learning for 3D Shape Understanding
                   </papertitle>
                   <br>
@@ -226,11 +229,11 @@
 
 
               <tr onmouseout="mftr_stop()" onmouseover="mftr_start()">
-                <td style="padding:20px;width:30%;vertical-align:middle">
-                  <div class="one"><img src="images/mftr.png" style="width:120%;height:auto">
+                <td style="padding:20px 20px 20px 20px;width:30%;vertical-align:middle">
+                  <div class="one"><img src="images/mftr.png" style="width:100%;height:auto">
                   </div>
                 </td>
-                <td style="padding:20px;width:70%;vertical-align:middle">
+                <td style="padding:20px 20px 20px 0px;width:70%;vertical-align:middle">
                   <papertitle>Tile Classification Based Viewport Prediction with Multi-modal Fusion Transformer
                   </papertitle>
                   <br>
@@ -241,6 +244,8 @@
                   <br>
                   <em> ACM MM 2023</em>
                   <br>
+                  <a href="https://github.com/alanzhangcs/MFTR">Project Page</a>
+                  /
                   <a href="https://github.com/alanzhangcs/MFTR">Code</a>
                   /
                   <a href="https://arxiv.org/pdf/2309.14704">Paper</a>
