--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
                   <div style="max-height:200px;overflow-y:auto;margin-top:8px;padding-right:10px;">
                     <ul style="margin-top:4px;">
                       <li><strong>[2026.02]</strong> Two first-author papers accepted by CVPR 2026!</li>
+                      <li><strong>[2026.01]</strong> I will join TikTok as a Research Intern in summer 2026! See you in
+                        San Jose!</li>
                       <li><strong>[2025.07]</strong> One paper accepted by ICCV 2025!</li>
                       <li><strong>[2024.08]</strong> Joined MSU as a Ph.D. student!</li>
                       <li><strong>[2024.06]</strong> Honored with the Outstanding Graduate Thesis Award at XJTU!
